fixed vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,9 @@ body {
   gap: 1rem;
   padding: 1rem 0.5rem;
   font-family: 'Sarabun', sans-serif;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
@@ -759,6 +762,7 @@ input[type=checkbox]:checked:after {
   #root {
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
   }
 
   main {
